# lab-python-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject-base.toml  pyproject-python-cli.toml  pyproject-rust-cli.toml  pyproject.toml
.github/workflows/: CI.yml
python/lab_python_rust/: __init__.py  __main__.py  cli.py  utils.py
src/: lib.rs  main.rs
