[package]
name = "lab-python-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lab_python_rust"
crate-type = ["cdylib"]

[[bin]]
name = "lab-cli-rs"
path = "src/main.rs"

[dependencies]
pyo3 = { version =  "0.20.2", features = ["auto-initialize"] }
clap = {features = ["derive"], version = "4.4.18"}
